<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    android:elevation="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_team_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editJoinTeamName"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:hint="@string/team_name" />

    <EditText
        android:id="@+id/editJoinTeamPassword"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:hint="@string/team_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/eyeJoinTeamPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_eye_closed"
        android:contentDescription="@string/show_password" />

    <Button
        android:id="@+id/buttonSubmitJoinTeam"
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
