<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="363dp"
            android:layout_height="58dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="359dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="359dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <ImageView
            android:id="@+id/eyeIcon"
            android:layout_width="53dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_eye_closed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <Button
            android:id="@+id/roleParentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eyeIcon" />

        <Button
            android:id="@+id/roleChildButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eyeIcon" />

        <!-- Parent Fields Container -->
        <LinearLayout
            android:id="@+id/parentFields"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/roleChildButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/teamEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_name" />

            <EditText
                android:id="@+id/teamPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/parentFields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
