<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editRewardName"
        android:layout_width="378dp"
        android:layout_height="61dp"
        android:hint="@string/reward_name_label" />

    <EditText
        android:id="@+id/editRewardCost"
        android:layout_width="386dp"
        android:layout_height="62dp"
        android:hint="@string/points_label"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSubmitEditReward"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
